[gd_scene load_steps=4 format=2]

[ext_resource path="res://TierTwoModules/pickup_items/PickupItemBase.gd" type="Script" id=1]
[ext_resource path="res://TierTwoModules/pickup_items/audio/PickupItemsAudioLib.tscn" type="PackedScene" id=2]
[ext_resource path="res://Modules/interactables/InteractableBase.tscn" type="PackedScene" id=3]

[node name="PickupItemBase" type="RigidBody" groups=["persist"]]
contacts_reported = 4
contact_monitor = true
script = ExtResource( 1 )

[node name="PickupItemsAudioLib" parent="." instance=ExtResource( 2 )]

[node name="InteractableArea" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_self_body_entered"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="on_interact" from="InteractableArea" to="." method="_on_InteractableArea_on_interact"]
